<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@string/padding_border"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        />

    <EditText
        android:id="@+id/edtEmpleado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/button_textEmpleado"
        />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        >

    <Button
        android:id="@+id/edtLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/button_text"
        android:theme="@style/RaisedButtonDark"
        />

    <Button
        android:id="@+id/buttonEmpl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_textEmpleado"
        android:theme="@style/RaisedButtonDark"
        />

    <Button
        android:id="@+id/buttonAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_textAdmin"
        android:theme="@style/RaisedButtonDark"
        />

    </LinearLayout>
</LinearLayout>