<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@string/padding_border"
        >

    <ImageView
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:background="@drawable/icon_user_menu"
        android:layout_marginStart="130dp"
        android:layout_marginBottom="20dp"

        />

    <Button
        android:id="@+id/buttonRegEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_entry"
        android:theme="@style/RaisedButtonDark"

        />

    <Button
        android:id="@+id/buttonSignHist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_hist"
        android:theme="@style/RaisedButtonDark"
        />

    </LinearLayout>